--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -1,9 +1,8 @@
 ---
-
 import Layout from '@/components/Layout.astro';
 import { getCollection } from 'astro:content';
 export async function getStaticPaths() {
-  const blogEntries = await getCollection('articles');
+  const blogEntries = await getCollection('posts');
   return blogEntries.map(entry => ({
     params: { slug: entry.slug }, props: { entry },
   }));
