--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,6 @@ import Layout from "@/components/Layout.astro";
 		<h1>Jaga Santagostino's digital garden 🌱</h1>
 	</div>
 	
-	<a href="/articles" class="text-blue-700 underline visited:text-purple-900">Articles</a>
+	<a href="/posts" class="text-blue-700 underline visited:text-purple-900">Posts</a>
 </Layout>
 
