--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from "@/components/Layout.astro";
 
 <Layout>
 	<div class="grid place-items-center h-screen font-thin text-xl">
-		<h1>Jaga Santagostino's digital garden 🌱</h1>
+		<h1>Jaga Santagostino's tech blog 🌱</h1>
 	</div>
 	
 	<a href="/posts" class="text-blue-700 underline visited:text-purple-900">Posts</a>
