--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -7,7 +7,7 @@ import Header from "@/components/Header.astro";
 		<BaseHead />
 	</head>
 	<body>
-		<Header />
+		<!-- <Header /> -->
 		
 		<slot/>
 	</body>
