--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -22,3 +22,8 @@ const { title = "Jaga Santagostino", description = "Jaga Santagostino's Digital 
 <link rel="sitemap" href="/sitemap-index.xml" />
 
 <link rel="canonical" href={canonicalURL} />
+
+<!-- fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
