--- a/src/pages/til/[...slug].astro
+++ b/src/pages/til/[...slug].astro
@@ -2,7 +2,7 @@
 import Layout from '@/components/Layout.astro';
 import { getCollection } from 'astro:content';
 export async function getStaticPaths() {
-  const blogEntries = await getCollection('posts');
+  const blogEntries = await getCollection('til');
   return blogEntries.map(entry => ({
     params: { slug: entry.slug }, props: { entry },
   }));
@@ -13,14 +13,9 @@ const { Content } = await entry.render();
 
   <Layout>
 
-      
-    
-    
   
   <main class="max-w-screen-md p-3 md:px-12 md:py-24 prose  mx-auto">
     <h1>{entry.data.title}</h1>
-    <h2>{entry.data.description}</h2>
-  
     
     <Content />
   
