--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "@/components/Layout.astro";
 ---
 
 <Layout>
-	<div class="grid place-items-center h-screen font-thin text-xl">
+	<div class="grid place-items-center h-screen font-thin text-xl text-white">
 		<h1>Jaga Santagostino's tech blog 🧑‍🔧</h1>
 	</div>
 	
