--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -5,12 +5,14 @@ import Layout from '@/components/Layout.astro';
 const posts = await getCollection('posts');
 ---
 <Layout>
-  <h2>Posts</h2>
-  <ul>
-    {posts.map((a) => (
-      <li>
-      <a href={`/posts/${a.slug}`} class="text-blue-700 underline visited:text-purple-900">{a.data.title}</a> 
-    </li>
-  ))}
-</ul>
+  <div class="prose">
+    <h2>Posts</h2>
+    <ul>
+      {posts.map((a) => (
+        <li>
+        <a href={`/posts/${a.slug}`}>{a.data.title}</a>
+      </li>
+    ))}
+    </ul>
+  </div>
 </Layout>
