--- a/src/pages/til/index.astro
+++ b/src/pages/til/index.astro
@@ -5,12 +5,14 @@ import Layout from '@/components/Layout.astro';
 const posts = await getCollection('til');
 ---
 <Layout>
-  <h2>"Today I Learned" posts</h2>
+  <div class="prose">
+    <h2>"Today I Learned" posts</h2>
   <ul>
     {posts.map((a) => (
       <li>
-      <a href={`/til/${a.slug}`} class="text-blue-700 underline visited:text-purple-900">{a.data.title}</a> 
+      <a href={`/til/${a.slug}`}>{a.data.title}</a> 
     </li>
   ))}
 </ul>
+  </div>
 </Layout>
