--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,10 @@
 ---
+const pathname = new URL(Astro.request.url).pathname;
+const currentPath = pathname.slice(1); // remove the first "/"
 ---
 <header>
-  <nav class="text-white">
-    <a href="/">Home</a>
+  <nav class="text-white flex items-center justify-between">
+    <a href="/"  >Home</a>
     <a href="/til">Til</a>
   </nav>
 </header>
