--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,9 @@
 ---
 ---
-<header>
-  <nav class="text-white flex items-center justify-between">
+<header class="pt-8">
+  <nav class="text-white flex items-center justify-center gap-4 uppercase">
     <a href="/">Home</a>
     <a href="/til">Til</a>
+    <a href="/posts">Posts</a>
   </nav>
 </header>
