--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -8,7 +8,7 @@ interface Props {
 }
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title = "Jaga Santagostino", description = "Jaga Santagostino's Digital Garden 🌱" } = Astro.props;
+const { title = "Tech | Jaga Santagostino", description = "Jaga Santagostino's Tech Blog 🌱" } = Astro.props;
 ---
 <meta charset="utf-8" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
