--- a/src/global.css
+++ b/src/global.css
@@ -29,7 +29,7 @@
   }
 
   a {
-    @apply text-green-300  visited:text-orange-400;
+    @apply !text-green-300  visited:!text-green-300;
   }
 
   /* p {
@@ -46,4 +46,8 @@
 
 .expressive-code + .expressive-code {
   @apply mt-6;
+}
+
+p + p > img {
+  @apply !mt-1 border-[3px] border-white/10 rounded-md;
 }
