--- a/src/global.css
+++ b/src/global.css
@@ -23,13 +23,28 @@
     @apply pb-2;
   } */
 
-  body {
-    font-family: "Hind Madurai", sans-serif;
-    background-color: #222;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    color: #1d211e;
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
   }
 
+  h1 {
+    font-size: 3.15rem;
+  }
+
+  body {
+    /* font-family: "Hind Madurai", sans-serif; */
+    color: #1d211e;
+    /* background-color: #222; */
+  }
   a {
-    @apply !text-green-300  visited:!text-green-300;
+    color: #1d211e;
   }
 
   /* p {
