--- a/src/pages/til/[...slug].astro
+++ b/src/pages/til/[...slug].astro
@@ -1,22 +1,21 @@
 ---
-import Layout from '@/components/Layout.astro';
-import { getCollection } from 'astro:content';
+import Layout from "@/components/Layout.astro";
+import { getCollection } from "astro:content";
 export async function getStaticPaths() {
-  const blogEntries = await getCollection('til');
-  return blogEntries.map(entry => ({
-    params: { slug: entry.slug }, props: { entry },
+  const blogEntries = await getCollection("til");
+  return blogEntries.map((entry) => ({
+    params: { slug: entry.slug },
+    props: { entry },
   }));
 }
 const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
 
-  <Layout>
-
-  
+<Layout>
   <main class="max-w-screen-md p-3 md:px-12 md:py-24 prose mx-auto">
     <h1>{entry.data.title}</h1>
-    
+
     <Content />
   </main>
 </Layout>
